--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-connect": "^2.2.0",
     "gulp-csscomb": "^3.0.3",
     "gulp-sass": "^1.3.3",
     "gulp-styledocco": "0.0.3",
