--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-connect": "^2.2.0",
     "gulp-csscomb": "^3.0.3",
+    "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.3.3",
     "gulp-styledocco": "0.0.3",
     "gulp.spritesmith": "^2.6.0"
